Misc compiler warnings, late Feb 2022 edition https://bugs.webkit.org/show_bug.cgi?id=237275

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2022-03-01
Reviewed by Adrian Perez de Castro.

Source/JavaScriptCore:

Suppress suspected false-positive -Wstringop-overflow and -Wformat-overflow warnings. Also,
remove an unused variable.

* API/tests/MultithreadedMultiVMExecutionTest.cpp:
(startMultithreadedMultiVMExecutionTest):
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):
* ftl/FTLOSRExit.cpp:
(JSC::FTL::OSRExitDescriptor::prepareOSRExitHandle):
* yarr/YarrJIT.cpp:

Source/WebCore:

Remove a redundant move. Sprinkle RELEASE_ASSERT_NOT_REACHED() as required to avoid
-Wreturn-type warnings.

* Modules/push-api/PushDatabase.cpp:
(WebCore::openAndMigrateDatabaseImpl):
* style/ContainerQueryEvaluator.cpp:
(WebCore::Style::ContainerQueryEvaluator::evaluateCondition const):
(WebCore::Style::ContainerQueryEvaluator::evaluateSizeFeature const):
* style/ContainerQueryEvaluator.h:
(WebCore::Style::operator!):
* style/StyleScope.cpp:
(WebCore::Style::Scope::updateQueryContainerState):

Source/WebKit:

Delete an unused function. Remove a redundant move.

* Shared/AuxiliaryProcess.cpp:
(WebKit::applySandboxProfileForDaemon): Deleted.
* Shared/WebFoundTextRange.cpp:
(WebKit::WebFoundTextRange::decode):


Canonical link: https://commits.webkit.org/247952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290681 268f45cc-cd09-0410-ab3c-d52691b4dbfc